--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate --accelerate && prisma migrate deploy && next build",
+    "build": "prisma generate --accelerate && prisma migrate deploy --directUrl && next build",
     "start": "next start",
     "lint": "next lint"
   },
